if(JVX_RELEASE_SDK)
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION ${INSTALL_PATH_INCLUDE_STATIC}/jvx-component-templates-mex COMPONENT ${INSTALL_COMPONENT} FILES_MATCHING PATTERN "*.h")
	# message(FATAL_ERROR "Hier ${CMAKE_CURRENT_SOURCE_DIR}/include -> ${INSTALL_PATH_INCLUDE_STATIC}/jvx-component-templates-mex")
endif()